# ml-aws

./: .gitignore  pyproject.toml
Notebooks/: 1-loading_raw_csv.ipynb  3-feature_engineering.ipynb  4-baseline.ipynb  5-all_models.ipynb  6-hyperparametertuning.ipynb  loading_raw_csv.ipynb
models/: target_encoder.pkl
src/feature_pipeline/: preprocess.py
src/inference_pipeline/: inference.py
tests/: test_training.py
